@@ -1,0 +1,12 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/amor/amor-4.4.3.ebuild,v 1.1 2010/05/03 20:12:12 alexxy Exp $
+
+EAPI="3"
+
+KMNAME="kdetoys"
+inherit kde4-meta
+
+DESCRIPTION="KDE: Amusing Misuse Of Resources - desktop-dwelling creature"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux"
+IUSE="debug +handbook"
