@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/amor
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/amor/ChangeLog,v 1.149 2010/03/31 21:57:27 spatz Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/amor/ChangeLog,v 1.150 2010/05/03 20:12:12 alexxy Exp $
+
+*amor-4.4.3 (03 May 2010)
+
+  03 May 2010; Alexey Shvetsov <alexxy@gentoo.org> +amor-4.4.3.ebuild:
+  Version bump
 
   31 Mar 2010; Dror Levin <spatz@gentoo.org> -amor-4.3.4.ebuild,
   -amor-4.4.0.ebuild:
